# ros2-auto-nav-slam

./: README.md
ros2-auto-nav-slam/src/zizhuguihua/: package.xml  setup.cfg  setup.py
ros2-auto-nav-slam/src/zizhuguihua/config/: nav2_params.yaml
ros2-auto-nav-slam/src/zizhuguihua/launch/: auto_nav.launch.py
ros2-auto-nav-slam/src/zizhuguihua/resource/: zizhuguihua
ros2-auto-nav-slam/src/zizhuguihua/urdf/: zizhuguihua.urdf.xacro
ros2-auto-nav-slam/src/zizhuguihua/worlds/: nav_test.world
ros2-auto-nav-slam/src/zizhuguihua/zizhuguihua/: map_receiver.py  send_target.py
